Amarok ChangeLog
================
(C) 2002-2010 the Amarok authors.


VERSION 2.3.1
  CHANGES:

  BUGFIXES:
    * Fixed factor used when filtering lengths in collection browser.
    * Fixed wrong value used when filtering comments in collection browser.
    * Don't truncate the "Label:" label in the TagDialog. (BR 235957)
    * Display extended characters properly in names of Last.fm streams.
      (BR 222930)
    * Cover fetcher: prevent automatic fetcher from setting album's cover if
      it is done manually during the download. (BR 236839)
    * File browser: show folders first, files afterwards. Patch by
      <dystopticus@gmx.net>. (BR 226599)
    * Queued track's contextual menu entry about dequeueing was written wrong
      and misleading. (BR 235047)
    * Custom color setting in the On Screen Display was only applied after
      restart. Patch by Frank Steinmetzger <Warp_7@gmx.de>.
    * Track Rating was not always displayed correctly in the On Screen
      Display. Patch by Frank Steinmetzger <Warp_7@gmx.de>.
    * Improved layout for applet setting dialogs. Patch by Felix Geyer
      <debfx-kde@fobos.de>.
    * Made icons in applets react correctly in double-click environments.
      Thanks to Felix Geyer <debfx-kde@fobos.de>.
    * Several bug fixes for the bundled LyricWiki script. Patch by Oleg G
      <verdrehung@gmail.com>. (BR 233605)
    * Better fix for pausing SHOUTcast streams, without advancing to the next
      track after resume. (BR 192878)


VERSION 2.3.1-Beta 1
  FEATURES:
    * Persistant Queue Saving: The playlist queue is now saved when Amarok
      is closed and restored upon startup. (BR 215057)
    * Automated Playlist Generator: allows smart creation of playlists that
      match user-specified constraints. Combines the features of "Smart
      Playlists" in Amarok 1.4 with the Bias system of Amarok 2.0.
    * It's now possible to mark all episodes in a channel as old or new at once.